--- a/k8s/devops-project/deployment.yaml
+++ b/k8s/devops-project/deployment.yaml
@@ -31,3 +31,11 @@ spec:
             limits:
               cpu: "100m"
               memory: "256Mi"
+          securityContext:
+            runAsNonRoot: true
+            runAsUser: 1000
+            allowPrivilegeEscalation: false
+            readOnlyRootFilesystem: true
+            capabilities:
+              drop:
+                - ALL
